y.output
Grammar

    0 $accept: Program $end

    1 Program: DeclList

    2 DeclList: DeclList Decl
    3         | Decl

    4 Decl: ClassDecl
    5     | FnDecl
    6     | VarDecl
    7     | IntfDecl

    8 VarDecl: Variable ';'

    9 Variable: Type T_Identifier

   10 Type: T_Int
   11     | T_Bool
   12     | T_String
   13     | T_Double
   14     | T_Identifier
   15     | Type T_Dims

   16 IntfDecl: T_Interface T_Identifier '{' IntfList '}'

   17 IntfList: IntfList FnHeader ';'
   18         | %empty

   19 ClassDecl: T_Class T_Identifier OptExt OptImpl '{' FieldList '}'

   20 OptExt: T_Extends T_Identifier
   21       | %empty

   22 OptImpl: T_Implements ImpList
   23        | %empty

   24 ImpList: ImpList ',' T_Identifier
   25        | T_Identifier

   26 FieldList: FieldList Field
   27          | %empty

   28 Field: VarDecl
   29      | FnDecl

   30 FnHeader: Type T_Identifier '(' Formals ')'
   31         | T_Void T_Identifier '(' Formals ')'

   32 Formals: FormalList
   33        | %empty

   34 FormalList: FormalList ',' Variable
   35           | Variable

   36 FnDecl: FnHeader StmtBlock

   37 StmtBlock: '{' VarDecls StmtList '}'

   38 VarDecls: VarDecls VarDecl
   39         | %empty

   40 StmtList: Stmt StmtList
   41         | %empty

   42 Stmt: OptExpr ';'
   43     | StmtBlock
   44     | T_If '(' Expr ')' Stmt OptElse
   45     | T_While '(' Expr ')' Stmt
   46     | T_For '(' OptExpr ';' Expr ';' OptExpr ')' Stmt
   47     | T_Return Expr ';'
   48     | T_Return ';'
   49     | T_Print '(' ExprList ')' ';'
   50     | T_Break ';'

   51 LValue: T_Identifier
   52       | Expr '.' T_Identifier
   53       | Expr '[' Expr ']'

   54 Call: T_Identifier '(' Actuals ')'
   55     | Expr '.' T_Identifier '(' Actuals ')'

   56 OptExpr: Expr
   57        | %empty

   58 Expr: LValue
   59     | Call
   60     | Constant
   61     | LValue '=' Expr
   62     | Expr '+' Expr
   63     | Expr '-' Expr
   64     | Expr '/' Expr
   65     | Expr '*' Expr
   66     | Expr '%' Expr
   67     | Expr T_Equal Expr
   68     | Expr T_NotEqual Expr
   69     | Expr '<' Expr
   70     | Expr '>' Expr
   71     | Expr T_LessEqual Expr
   72     | Expr T_GreaterEqual Expr
   73     | Expr T_And Expr
   74     | Expr T_Or Expr
   75     | '(' Expr ')'
   76     | '-' Expr
   77     | '!' Expr
   78     | T_ReadInteger '(' ')'
   79     | T_ReadLine '(' ')'
   80     | T_New '(' T_Identifier ')'
   81     | T_NewArray '(' Expr ',' Type ')'
   82     | T_This

   83 Constant: T_IntConstant
   84         | T_BoolConstant
   85         | T_DoubleConstant
   86         | T_StringConstant
   87         | T_Null

   88 Actuals: ExprList
   89        | %empty

   90 ExprList: ExprList ',' Expr
   91         | Expr

   92 OptElse: T_Else Stmt
   93        | %empty


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 77
    '%' (37) 66
    '(' (40) 30 31 44 45 46 49 54 55 75 78 79 80 81
    ')' (41) 30 31 44 45 46 49 54 55 75 78 79 80 81
    '*' (42) 65
    '+' (43) 62
    ',' (44) 24 34 81 90
    '-' (45) 63 76
    '.' (46) 52 55
    '/' (47) 64
    ';' (59) 8 17 42 46 47 48 49 50
    '<' (60) 69
    '=' (61) 61
    '>' (62) 70
    '[' (91) 53
    ']' (93) 53
    '{' (123) 16 19 37
    '}' (125) 16 19 37
    error (256)
    T_Void (258) 31
    T_Bool (259) 11
    T_Int (260) 10
    T_Double (261) 13
    T_String (262) 12
    T_Class (263) 19
    T_LessEqual (264) 71
    T_GreaterEqual (265) 72
    T_Equal (266) 67
    T_NotEqual (267) 68
    T_Dims (268) 15
    T_And (269) 73
    T_Or (270) 74
    T_Null (271) 87
    T_Extends (272) 20
    T_This (273) 82
    T_Interface (274) 16
    T_Implements (275) 22
    T_While (276) 45
    T_For (277) 46
    T_If (278) 44
    T_Else (279) 92
    T_Return (280) 47 48
    T_Break (281) 50
    T_New (282) 80
    T_NewArray (283) 81
    T_Print (284) 49
    T_ReadInteger (285) 78
    T_ReadLine (286) 79
    T_Identifier <identifier> (287) 9 14 16 19 20 24 25 30 31 51 52 54 55 80
    T_StringConstant <stringConstant> (288) 86
    T_IntConstant <integerConstant> (289) 83
    T_DoubleConstant <doubleConstant> (290) 85
    T_BoolConstant <boolConstant> (291) 84
    T_UnaryMinus (292)
    T_Lower_Than_Else (293)


Nonterminals, with rules where they appear

    $accept (57)
        on left: 0
    Program (58)
        on left: 1
        on right: 0
    DeclList <declList> (59)
        on left: 2 3
        on right: 1 2
    Decl <decl> (60)
        on left: 4 5 6 7
        on right: 2 3
    VarDecl <var> (61)
        on left: 8
        on right: 6 28 38
    Variable <var> (62)
        on left: 9
        on right: 8 34 35
    Type <type> (63)
        on left: 10 11 12 13 14 15
        on right: 9 15 30 81
    IntfDecl <decl> (64)
        on left: 16
        on right: 7
    IntfList <declList> (65)
        on left: 17 18
        on right: 16 17
    ClassDecl <decl> (66)
        on left: 19
        on right: 4
    OptExt <cType> (67)
        on left: 20 21
        on right: 19
    OptImpl <cTypeList> (68)
        on left: 22 23
        on right: 19
    ImpList <cTypeList> (69)
        on left: 24 25
        on right: 22 24
    FieldList <declList> (70)
        on left: 26 27
        on right: 19 26
    Field <decl> (71)
        on left: 28 29
        on right: 26
    FnHeader <fDecl> (72)
        on left: 30 31
        on right: 17 36
    Formals <varList> (73)
        on left: 32 33
        on right: 30 31
    FormalList <varList> (74)
        on left: 34 35
        on right: 32 34
    FnDecl <fDecl> (75)
        on left: 36
        on right: 5 29
    StmtBlock <stmt> (76)
        on left: 37
        on right: 36 43
    VarDecls <varList> (77)
        on left: 38 39
        on right: 37 38
    StmtList <stmtList> (78)
        on left: 40 41
        on right: 37 40
    Stmt <stmt> (79)
        on left: 42 43 44 45 46 47 48 49 50
        on right: 40 44 45 46 92
    LValue <lvalue> (80)
        on left: 51 52 53
        on right: 58 61
    Call <expr> (81)
        on left: 54 55
        on right: 59
    OptExpr <expr> (82)
        on left: 56 57
        on right: 42 46
    Expr <expr> (83)
        on left: 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82
        on right: 44 45 46 47 52 53 55 56 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 81 90 91
    Constant <expr> (84)
        on left: 83 84 85 86 87
        on right: 60
    Actuals <exprList> (85)
        on left: 88 89
        on right: 54 55
    ExprList <exprList> (86)
        on left: 90 91
        on right: 49 88 90
    OptElse <stmt> (87)
        on left: 92 93
        on right: 44


State 0

    0 $accept: . Program $end

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Class       shift, and go to state 6
    T_Interface   shift, and go to state 7
    T_Identifier  shift, and go to state 8

    Program    go to state 9
    DeclList   go to state 10
    Decl       go to state 11
    VarDecl    go to state 12
    Variable   go to state 13
    Type       go to state 14
    IntfDecl   go to state 15
    ClassDecl  go to state 16
    FnHeader   go to state 17
    FnDecl     go to state 18


State 1

   31 FnHeader: T_Void . T_Identifier '(' Formals ')'

    T_Identifier  shift, and go to state 19


State 2

   11 Type: T_Bool .

    $default  reduce using rule 11 (Type)


State 3

   10 Type: T_Int .

    $default  reduce using rule 10 (Type)


State 4

   13 Type: T_Double .

    $default  reduce using rule 13 (Type)


State 5

   12 Type: T_String .

    $default  reduce using rule 12 (Type)


State 6

   19 ClassDecl: T_Class . T_Identifier OptExt OptImpl '{' FieldList '}'

    T_Identifier  shift, and go to state 20


State 7

   16 IntfDecl: T_Interface . T_Identifier '{' IntfList '}'

    T_Identifier  shift, and go to state 21


State 8

   14 Type: T_Identifier .

    $default  reduce using rule 14 (Type)


State 9

    0 $accept: Program . $end

    $end  shift, and go to state 22


State 10

    1 Program: DeclList .
    2 DeclList: DeclList . Decl

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Class       shift, and go to state 6
    T_Interface   shift, and go to state 7
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 1 (Program)

    Decl       go to state 23
    VarDecl    go to state 12
    Variable   go to state 13
    Type       go to state 14
    IntfDecl   go to state 15
    ClassDecl  go to state 16
    FnHeader   go to state 17
    FnDecl     go to state 18


State 11

    3 DeclList: Decl .

    $default  reduce using rule 3 (DeclList)


State 12

    6 Decl: VarDecl .

    $default  reduce using rule 6 (Decl)


State 13

    8 VarDecl: Variable . ';'

    ';'  shift, and go to state 24


State 14

    9 Variable: Type . T_Identifier
   15 Type: Type . T_Dims
   30 FnHeader: Type . T_Identifier '(' Formals ')'

    T_Dims        shift, and go to state 25
    T_Identifier  shift, and go to state 26


State 15

    7 Decl: IntfDecl .

    $default  reduce using rule 7 (Decl)


State 16

    4 Decl: ClassDecl .

    $default  reduce using rule 4 (Decl)


State 17

   36 FnDecl: FnHeader . StmtBlock

    '{'  shift, and go to state 27

    StmtBlock  go to state 28


State 18

    5 Decl: FnDecl .

    $default  reduce using rule 5 (Decl)


State 19

   31 FnHeader: T_Void T_Identifier . '(' Formals ')'

    '('  shift, and go to state 29


State 20

   19 ClassDecl: T_Class T_Identifier . OptExt OptImpl '{' FieldList '}'

    T_Extends  shift, and go to state 30

    $default  reduce using rule 21 (OptExt)

    OptExt  go to state 31


State 21

   16 IntfDecl: T_Interface T_Identifier . '{' IntfList '}'

    '{'  shift, and go to state 32


State 22

    0 $accept: Program $end .

    $default  accept


State 23

    2 DeclList: DeclList Decl .

    $default  reduce using rule 2 (DeclList)


State 24

    8 VarDecl: Variable ';' .

    $default  reduce using rule 8 (VarDecl)


State 25

   15 Type: Type T_Dims .

    $default  reduce using rule 15 (Type)


State 26

    9 Variable: Type T_Identifier .
   30 FnHeader: Type T_Identifier . '(' Formals ')'

    '('  shift, and go to state 33

    $default  reduce using rule 9 (Variable)


State 27

   37 StmtBlock: '{' . VarDecls StmtList '}'

    $default  reduce using rule 39 (VarDecls)

    VarDecls  go to state 34


State 28

   36 FnDecl: FnHeader StmtBlock .

    $default  reduce using rule 36 (FnDecl)


State 29

   31 FnHeader: T_Void T_Identifier '(' . Formals ')'

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 33 (Formals)

    Variable    go to state 35
    Type        go to state 36
    Formals     go to state 37
    FormalList  go to state 38


State 30

   20 OptExt: T_Extends . T_Identifier

    T_Identifier  shift, and go to state 39


State 31

   19 ClassDecl: T_Class T_Identifier OptExt . OptImpl '{' FieldList '}'

    T_Implements  shift, and go to state 40

    $default  reduce using rule 23 (OptImpl)

    OptImpl  go to state 41


State 32

   16 IntfDecl: T_Interface T_Identifier '{' . IntfList '}'

    $default  reduce using rule 18 (IntfList)

    IntfList  go to state 42


State 33

   30 FnHeader: Type T_Identifier '(' . Formals ')'

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 33 (Formals)

    Variable    go to state 35
    Type        go to state 36
    Formals     go to state 43
    FormalList  go to state 38


State 34

   37 StmtBlock: '{' VarDecls . StmtList '}'
   38 VarDecls: VarDecls . VarDecl

    T_Bool            shift, and go to state 2
    T_Int             shift, and go to state 3
    T_Double          shift, and go to state 4
    T_String          shift, and go to state 5
    T_Null            shift, and go to state 44
    T_This            shift, and go to state 45
    T_While           shift, and go to state 46
    T_For             shift, and go to state 47
    T_If              shift, and go to state 48
    T_Return          shift, and go to state 49
    T_Break           shift, and go to state 50
    T_New             shift, and go to state 51
    T_NewArray        shift, and go to state 52
    T_Print           shift, and go to state 53
    T_ReadInteger     shift, and go to state 54
    T_ReadLine        shift, and go to state 55
    T_Identifier      shift, and go to state 56
    T_StringConstant  shift, and go to state 57
    T_IntConstant     shift, and go to state 58
    T_DoubleConstant  shift, and go to state 59
    T_BoolConstant    shift, and go to state 60
    '-'               shift, and go to state 61
    '!'               shift, and go to state 62
    '{'               shift, and go to state 27
    '('               shift, and go to state 63

    ';'       reduce using rule 57 (OptExpr)
    $default  reduce using rule 41 (StmtList)

    VarDecl    go to state 64
    Variable   go to state 13
    Type       go to state 36
    StmtBlock  go to state 65
    StmtList   go to state 66
    Stmt       go to state 67
    LValue     go to state 68
    Call       go to state 69
    OptExpr    go to state 70
    Expr       go to state 71
    Constant   go to state 72


State 35

   35 FormalList: Variable .

    $default  reduce using rule 35 (FormalList)


State 36

    9 Variable: Type . T_Identifier
   15 Type: Type . T_Dims

    T_Dims        shift, and go to state 25
    T_Identifier  shift, and go to state 73


State 37

   31 FnHeader: T_Void T_Identifier '(' Formals . ')'

    ')'  shift, and go to state 74


State 38

   32 Formals: FormalList .
   34 FormalList: FormalList . ',' Variable

    ','  shift, and go to state 75

    $default  reduce using rule 32 (Formals)


State 39

   20 OptExt: T_Extends T_Identifier .

    $default  reduce using rule 20 (OptExt)


State 40

   22 OptImpl: T_Implements . ImpList

    T_Identifier  shift, and go to state 76

    ImpList  go to state 77


State 41

   19 ClassDecl: T_Class T_Identifier OptExt OptImpl . '{' FieldList '}'

    '{'  shift, and go to state 78


State 42

   16 IntfDecl: T_Interface T_Identifier '{' IntfList . '}'
   17 IntfList: IntfList . FnHeader ';'

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8
    '}'           shift, and go to state 79

    Type      go to state 80
    FnHeader  go to state 81


State 43

   30 FnHeader: Type T_Identifier '(' Formals . ')'

    ')'  shift, and go to state 82


State 44

   87 Constant: T_Null .

    $default  reduce using rule 87 (Constant)


State 45

   82 Expr: T_This .

    $default  reduce using rule 82 (Expr)


State 46

   45 Stmt: T_While . '(' Expr ')' Stmt

    '('  shift, and go to state 83


State 47

   46 Stmt: T_For . '(' OptExpr ';' Expr ';' OptExpr ')' Stmt

    '('  shift, and go to state 84


State 48

   44 Stmt: T_If . '(' Expr ')' Stmt OptElse

    '('  shift, and go to state 85


State 49

   47 Stmt: T_Return . Expr ';'
   48     | T_Return . ';'

    T_Null            shift, and go to state 44
    T_This            shift, and go to state 45
    T_New             shift, and go to state 51
    T_NewArray        shift, and go to state 52
    T_ReadInteger     shift, and go to state 54
    T_ReadLine        shift, and go to state 55
    T_Identifier      shift, and go to state 86
    T_StringConstant  shift, and go to state 57
    T_IntConstant     shift, and go to state 58
    T_DoubleConstant  shift, and go to state 59
    T_BoolConstant    shift, and go to state 60
    '-'               shift, and go to state 61
    '!'               shift, and go to state 62
    ';'               shift, and go to state 87
    '('               shift, and go to state 63

    LValue    go to state 68
    Call      go to state 69
    Expr      go to state 88
    Constant  go to state 72


State 50

   50 Stmt: T_Break . ';'

    ';'  shift, and go to state 89


State 51

   80 Expr: T_New . '(' T_Identifier ')'

    '('  shift, and go to state 90


State 52

   81 Expr: T_NewArray . '(' Expr ',' Type ')'

    '('  shift, and go to state 91


State 53

   49 Stmt: T_Print . '(' ExprList ')' ';'

    '('  shift, and go to state 92


State 54

   78 Expr: T_ReadInteger . '(' ')'

    '('  shift, and go to state 93


State 55

   79 Expr: T_ReadLine . '(' ')'

    '('  shift, and go to state 94


State 56

   14 Type: T_Identifier .
   51 LValue: T_Identifier .
   54 Call: T_Identifier . '(' Actuals ')'

    '('  shift, and go to state 95

    T_Dims        reduce using rule 14 (Type)
    T_Identifier  reduce using rule 14 (Type)
    $default      reduce using rule 51 (LValue)


State 57

   86 Constant: T_StringConstant .

    $default  reduce using rule 86 (Constant)


State 58

   83 Constant: T_IntConstant .

    $default  reduce using rule 83 (Constant)


State 59

   85 Constant: T_DoubleConstant .

    $default  reduce using rule 85 (Constant)


State 60

   84 Constant: T_BoolConstant .

    $default  reduce using rule 84 (Constant)


State 61

   76 Expr: '-' . Expr

    T_Null            shift, and go to state 44
    T_This            shift, and go to state 45
    T_New             shift, and go to state 51
    T_NewArray        shift, and go to state 52
    T_ReadInteger     shift, and go to state 54
    T_ReadLine        shift, and go to state 55
    T_Identifier      shift, and go to state 86
    T_StringConstant  shift, and go to state 57
    T_IntConstant     shift, and go to state 58
    T_DoubleConstant  shift, and go to state 59
    T_BoolConstant    shift, and go to state 60
    '-'               shift, and go to state 61
    '!'               shift, and go to state 62
    '('               shift, and go to state 63

    LValue    go to state 68
    Call      go to state 69
    Expr      go to state 96
    Constant  go to state 72


State 62

   77 Expr: '!' . Expr

    T_Null            shift, and go to state 44
    T_This            shift, and go to state 45
    T_New             shift, and go to state 51
    T_NewArray        shift, and go to state 52
    T_ReadInteger     shift, and go to state 54
    T_ReadLine        shift, and go to state 55
    T_Identifier      shift, and go to state 86
    T_StringConstant  shift, and go to state 57
    T_IntConstant     shift, and go to state 58
    T_DoubleConstant  shift, and go to state 59
    T_BoolConstant    shift, and go to state 60
    '-'               shift, and go to state 61
    '!'               shift, and go to state 62
    '('               shift, and go to state 63

    LValue    go to state 68
    Call      go to state 69
    Expr      go to state 97
    Constant  go to state 72


State 63

   75 Expr: '(' . Expr ')'

    T_Null            shift, and go to state 44
    T_This            shift, and go to state 45
    T_New             shift, and go to state 51
    T_NewArray        shift, and go to state 52
    T_ReadInteger     shift, and go to state 54
    T_ReadLine        shift, and go to state 55
    T_Identifier      shift, and go to state 86
    T_StringConstant  shift, and go to state 57
    T_IntConstant     shift, and go to state 58
    T_DoubleConstant  shift, and go to state 59
    T_BoolConstant    shift, and go to state 60
    '-'               shift, and go to state 61
    '!'               shift, and go to state 62
    '('               shift, and go to state 63

    LValue    go to state 68
    Call      go to state 69
    Expr      go to state 98
    Constant  go to state 72


State 64

   38 VarDecls: VarDecls VarDecl .

    $default  reduce using rule 38 (VarDecls)


State 65

   43 Stmt: StmtBlock .

    $default  reduce using rule 43 (Stmt)


State 66

   37 StmtBlock: '{' VarDecls StmtList . '}'

    '}'  shift, and go to state 99


State 67

   40 StmtList: Stmt . StmtList

    T_Null            shift, and go to state 44
    T_This            shift, and go to state 45
    T_While           shift, and go to state 46
    T_For             shift, and go to state 47
    T_If              shift, and go to state 48
    T_Return          shift, and go to state 49
    T_Break           shift, and go to state 50
    T_New             shift, and go to state 51
    T_NewArray        shift, and go to state 52
    T_Print           shift, and go to state 53
    T_ReadInteger     shift, and go to state 54
    T_ReadLine        shift, and go to state 55
    T_Identifier      shift, and go to state 86
    T_StringConstant  shift, and go to state 57
    T_IntConstant     shift, and go to state 58
    T_DoubleConstant  shift, and go to state 59
    T_BoolConstant    shift, and go to state 60
    '-'               shift, and go to state 61
    '!'               shift, and go to state 62
    '{'               shift, and go to state 27
    '('               shift, and go to state 63

    ';'       reduce using rule 57 (OptExpr)
    $default  reduce using rule 41 (StmtList)

    StmtBlock  go to state 65
    StmtList   go to state 100
    Stmt       go to state 67
    LValue     go to state 68
    Call       go to state 69
    OptExpr    go to state 70
    Expr       go to state 71
    Constant   go to state 72


State 68

   58 Expr: LValue .
   61     | LValue . '=' Expr

    '='  shift, and go to state 101

    $default  reduce using rule 58 (Expr)


State 69

   59 Expr: Call .

    $default  reduce using rule 59 (Expr)


State 70

   42 Stmt: OptExpr . ';'

    ';'  shift, and go to state 102


State 71

   52 LValue: Expr . '.' T_Identifier
   53       | Expr . '[' Expr ']'
   55 Call: Expr . '.' T_Identifier '(' Actuals ')'
   56 OptExpr: Expr .
   62 Expr: Expr . '+' Expr
   63     | Expr . '-' Expr
   64     | Expr . '/' Expr
   65     | Expr . '*' Expr
   66     | Expr . '%' Expr
   67     | Expr . T_Equal Expr
   68     | Expr . T_NotEqual Expr
   69     | Expr . '<' Expr
   70     | Expr . '>' Expr
   71     | Expr . T_LessEqual Expr
   72     | Expr . T_GreaterEqual Expr
   73     | Expr . T_And Expr
   74     | Expr . T_Or Expr

    T_LessEqual     shift, and go to state 103
    T_GreaterEqual  shift, and go to state 104
    T_Equal         shift, and go to state 105
    T_NotEqual      shift, and go to state 106
    T_And           shift, and go to state 107
    T_Or            shift, and go to state 108
    '<'             shift, and go to state 109
    '>'             shift, and go to state 110
    '+'             shift, and go to state 111
    '-'             shift, and go to state 112
    '*'             shift, and go to state 113
    '/'             shift, and go to state 114
    '%'             shift, and go to state 115
    '.'             shift, and go to state 116
    '['             shift, and go to state 117

    $default  reduce using rule 56 (OptExpr)


State 72

   60 Expr: Constant .

    $default  reduce using rule 60 (Expr)


State 73

    9 Variable: Type T_Identifier .

    $default  reduce using rule 9 (Variable)


State 74

   31 FnHeader: T_Void T_Identifier '(' Formals ')' .

    $default  reduce using rule 31 (FnHeader)


State 75

   34 FormalList: FormalList ',' . Variable

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    Variable  go to state 118
    Type      go to state 36


State 76

   25 ImpList: T_Identifier .

    $default  reduce using rule 25 (ImpList)


State 77

   22 OptImpl: T_Implements ImpList .
   24 ImpList: ImpList . ',' T_Identifier

    ','  shift, and go to state 119

    $default  reduce using rule 22 (OptImpl)


State 78

   19 ClassDecl: T_Class T_Identifier OptExt OptImpl '{' . FieldList '}'

    $default  reduce using rule 27 (FieldList)

    FieldList  go to state 120


State 79

   16 IntfDecl: T_Interface T_Identifier '{' IntfList '}' .

    $default  reduce using rule 16 (IntfDecl)


State 80

   15 Type: Type . T_Dims
   30 FnHeader: Type . T_Identifier '(' Formals ')'

    T_Dims        shift, and go to state 25
    T_Identifier  shift, and go to state 121


State 81

   17 IntfList: IntfList FnHeader . ';'

    ';'  shift, and go to state 122


State 82

   30 FnHeader: Type T_Identifier '(' Formals ')' .

    $default  reduce using rule 30 (FnHeader)


State 83

   45 Stmt: T_While '(' . Expr ')' Stmt

    T_Null            shift, and go to state 44
    T_This            shift, and go to state 45
    T_New             shift, and go to state 51
    T_NewArray        shift, and go to state 52
    T_ReadInteger     shift, and go to state 54
    T_ReadLine        shift, and go to state 55
    T_Identifier      shift, and go to state 86
    T_StringConstant  shift, and go to state 57
    T_IntConstant     shift, and go to state 58
    T_DoubleConstant  shift, and go to state 59
    T_BoolConstant    shift, and go to state 60
    '-'               shift, and go to state 61
    '!'               shift, and go to state 62
    '('               shift, and go to state 63

    LValue    go to state 68
    Call      go to state 69
    Expr      go to state 123
    Constant  go to state 72


State 84

   46 Stmt: T_For '(' . OptExpr ';' Expr ';' OptExpr ')' Stmt

    T_Null            shift, and go to state 44
    T_This            shift, and go to state 45
    T_New             shift, and go to state 51
    T_NewArray        shift, and go to state 52
    T_ReadInteger     shift, and go to state 54
    T_ReadLine        shift, and go to state 55
    T_Identifier      shift, and go to state 86
    T_StringConstant  shift, and go to state 57
    T_IntConstant     shift, and go to state 58
    T_DoubleConstant  shift, and go to state 59
    T_BoolConstant    shift, and go to state 60
    '-'               shift, and go to state 61
    '!'               shift, and go to state 62
    '('               shift, and go to state 63

    $default  reduce using rule 57 (OptExpr)

    LValue    go to state 68
    Call      go to state 69
    OptExpr   go to state 124
    Expr      go to state 71
    Constant  go to state 72


State 85

   44 Stmt: T_If '(' . Expr ')' Stmt OptElse

    T_Null            shift, and go to state 44
    T_This            shift, and go to state 45
    T_New             shift, and go to state 51
    T_NewArray        shift, and go to state 52
    T_ReadInteger     shift, and go to state 54
    T_ReadLine        shift, and go to state 55
    T_Identifier      shift, and go to state 86
    T_StringConstant  shift, and go to state 57
    T_IntConstant     shift, and go to state 58
    T_DoubleConstant  shift, and go to state 59
    T_BoolConstant    shift, and go to state 60
    '-'               shift, and go to state 61
    '!'               shift, and go to state 62
    '('               shift, and go to state 63

    LValue    go to state 68
    Call      go to state 69
    Expr      go to state 125
    Constant  go to state 72


State 86

   51 LValue: T_Identifier .
   54 Call: T_Identifier . '(' Actuals ')'

    '('  shift, and go to state 95

    $default  reduce using rule 51 (LValue)


State 87

   48 Stmt: T_Return ';' .

    $default  reduce using rule 48 (Stmt)


State 88

   47 Stmt: T_Return Expr . ';'
   52 LValue: Expr . '.' T_Identifier
   53       | Expr . '[' Expr ']'
   55 Call: Expr . '.' T_Identifier '(' Actuals ')'
   62 Expr: Expr . '+' Expr
   63     | Expr . '-' Expr
   64     | Expr . '/' Expr
   65     | Expr . '*' Expr
   66     | Expr . '%' Expr
   67     | Expr . T_Equal Expr
   68     | Expr . T_NotEqual Expr
   69     | Expr . '<' Expr
   70     | Expr . '>' Expr
   71     | Expr . T_LessEqual Expr
   72     | Expr . T_GreaterEqual Expr
   73     | Expr . T_And Expr
   74     | Expr . T_Or Expr

    T_LessEqual     shift, and go to state 103
    T_GreaterEqual  shift, and go to state 104
    T_Equal         shift, and go to state 105
    T_NotEqual      shift, and go to state 106
    T_And           shift, and go to state 107
    T_Or            shift, and go to state 108
    '<'             shift, and go to state 109
    '>'             shift, and go to state 110
    '+'             shift, and go to state 111
    '-'             shift, and go to state 112
    '*'             shift, and go to state 113
    '/'             shift, and go to state 114
    '%'             shift, and go to state 115
    '.'             shift, and go to state 116
    '['             shift, and go to state 117
    ';'             shift, and go to state 126


State 89

   50 Stmt: T_Break ';' .

    $default  reduce using rule 50 (Stmt)


State 90

   80 Expr: T_New '(' . T_Identifier ')'

    T_Identifier  shift, and go to state 127


State 91

   81 Expr: T_NewArray '(' . Expr ',' Type ')'

    T_Null            shift, and go to state 44
    T_This            shift, and go to state 45
    T_New             shift, and go to state 51
    T_NewArray        shift, and go to state 52
    T_ReadInteger     shift, and go to state 54
    T_ReadLine        shift, and go to state 55
    T_Identifier      shift, and go to state 86
    T_StringConstant  shift, and go to state 57
    T_IntConstant     shift, and go to state 58
    T_DoubleConstant  shift, and go to state 59
    T_BoolConstant    shift, and go to state 60
    '-'               shift, and go to state 61
    '!'               shift, and go to state 62
    '('               shift, and go to state 63

    LValue    go to state 68
    Call      go to state 69
    Expr      go to state 128
    Constant  go to state 72


State 92

   49 Stmt: T_Print '(' . ExprList ')' ';'

    T_Null            shift, and go to state 44
    T_This            shift, and go to state 45
    T_New             shift, and go to state 51
    T_NewArray        shift, and go to state 52
    T_ReadInteger     shift, and go to state 54
    T_ReadLine        shift, and go to state 55
    T_Identifier      shift, and go to state 86
    T_StringConstant  shift, and go to state 57
    T_IntConstant     shift, and go to state 58
    T_DoubleConstant  shift, and go to state 59
    T_BoolConstant    shift, and go to state 60
    '-'               shift, and go to state 61
    '!'               shift, and go to state 62
    '('               shift, and go to state 63

    LValue    go to state 68
    Call      go to state 69
    Expr      go to state 129
    Constant  go to state 72
    ExprList  go to state 130


State 93

   78 Expr: T_ReadInteger '(' . ')'

    ')'  shift, and go to state 131


State 94

   79 Expr: T_ReadLine '(' . ')'

    ')'  shift, and go to state 132


State 95

   54 Call: T_Identifier '(' . Actuals ')'

    T_Null            shift, and go to state 44
    T_This            shift, and go to state 45
    T_New             shift, and go to state 51
    T_NewArray        shift, and go to state 52
    T_ReadInteger     shift, and go to state 54
    T_ReadLine        shift, and go to state 55
    T_Identifier      shift, and go to state 86
    T_StringConstant  shift, and go to state 57
    T_IntConstant     shift, and go to state 58
    T_DoubleConstant  shift, and go to state 59
    T_BoolConstant    shift, and go to state 60
    '-'               shift, and go to state 61
    '!'               shift, and go to state 62
    '('               shift, and go to state 63

    $default  reduce using rule 89 (Actuals)

    LValue    go to state 68
    Call      go to state 69
    Expr      go to state 129
    Constant  go to state 72
    Actuals   go to state 133
    ExprList  go to state 134


State 96

   52 LValue: Expr . '.' T_Identifier
   53       | Expr . '[' Expr ']'
   55 Call: Expr . '.' T_Identifier '(' Actuals ')'
   62 Expr: Expr . '+' Expr
   63     | Expr . '-' Expr
   64     | Expr . '/' Expr
   65     | Expr . '*' Expr
   66     | Expr . '%' Expr
   67     | Expr . T_Equal Expr
   68     | Expr . T_NotEqual Expr
   69     | Expr . '<' Expr
   70     | Expr . '>' Expr
   71     | Expr . T_LessEqual Expr
   72     | Expr . T_GreaterEqual Expr
   73     | Expr . T_And Expr
   74     | Expr . T_Or Expr
   76     | '-' Expr .

    '.'  shift, and go to state 116
    '['  shift, and go to state 117

    $default  reduce using rule 76 (Expr)


State 97

   52 LValue: Expr . '.' T_Identifier
   53       | Expr . '[' Expr ']'
   55 Call: Expr . '.' T_Identifier '(' Actuals ')'
   62 Expr: Expr . '+' Expr
   63     | Expr . '-' Expr
   64     | Expr . '/' Expr
   65     | Expr . '*' Expr
   66     | Expr . '%' Expr
   67     | Expr . T_Equal Expr
   68     | Expr . T_NotEqual Expr
   69     | Expr . '<' Expr
   70     | Expr . '>' Expr
   71     | Expr . T_LessEqual Expr
   72     | Expr . T_GreaterEqual Expr
   73     | Expr . T_And Expr
   74     | Expr . T_Or Expr
   77     | '!' Expr .

    '.'  shift, and go to state 116
    '['  shift, and go to state 117

    $default  reduce using rule 77 (Expr)


State 98
